--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ a{
 }
 
 .heading_description {
-    margin: 30px 0 0 0;
+    margin: 50px 0 0 0;
     font-size: var(--small-font);
     font-weight: var(--regular-font);
 }
@@ -197,6 +197,21 @@ a{
 /* ---------------------------------------------------- Contact Us Page ------------------------------------------------------- */
 .contact-mainheading{
     margin-bottom: 70px;
+}
+.image_with_form_container{
+    box-shadow: 2px 2px 6px #0000001d;
+
+}
+.contact-title{
+    padding-top: 100px;
+    padding-bottom: 70px;
+}
+.title-contact{
+    text-align: center;
+    font-size: 36px;
+    line-height: 54px;
+    font-weight: 600;
+    color: var(--green);
 }
 .contact_map{
     min-height: 820px;
@@ -297,6 +312,21 @@ a{
     line-height: 54px;
     margin-top: 21px;
   }
+
+.back{
+    display: block;
+    width: 45px;
+    height: 45px;
+    background-color: var(--green);
+    text-align: center;
+    line-height: 45px;
+    color: white;
+    border-radius: 50%;
+    position: fixed;
+    top: 85%;
+    right:30px;
+    z-index: 9;
+}
   .horizontal-line {
     border-bottom: 1px solid var(--grey-color);
     margin: 20px 0;
@@ -325,9 +355,7 @@ a{
   .numeric-section .card-body-detail{
     font-size: var(--medium-font);
   }
-.map-section{
-    padding-top: 100px;
-}
+
 /*Media Query */
 @media only screen and (max-width: 1200px) {
     .contact_card{
@@ -472,6 +500,10 @@ a{
 }
 
 @media only screen and (max-width: 320px) {
+    .contact-title{
+        padding-top: 40px;
+        padding-bottom: 30px;
+    }
     .navbar-logo img {
         max-width: 170px;
         max-height: 32px;
