--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,7 +350,9 @@ a{
     line-height: 54px;
     margin-top: 21px;
   }
-
+.text-success1{
+    color: #b0cb1f;
+}
 .back{
     display: block;
     width: 45px;
@@ -363,7 +365,7 @@ a{
     position: fixed;
     top: 85%;
     right:40px;
-    z-index: 9;
+    z-index: 88888;
 }
   .horizontal-line {
     border-bottom: 1px solid var(--grey-color);
@@ -712,8 +714,8 @@ a{
 }
 
 .icon2 img {
-    width: 61px;
-    height: 46px;
+    width: 88px;
+    height: 58px;
     object-fit: cover;
 }
 
@@ -1444,6 +1446,7 @@ body {
     object-fit: cover;
 }
 .Fueling-Excellence-img2 {
+    
     padding-left: 20px;
 }
 
@@ -1460,6 +1463,7 @@ body {
 }
 
 .Global-Excellence-text p {
+    margin-top: 30px;
     font-weight: 400;
     line-height: 24px;
 }
@@ -2055,6 +2059,7 @@ body {
         padding: 0;
         display: flex;
         justify-content: center;
+    
     }
     .Fueling-Excellence-title h3{
         margin-top: 40px;
@@ -2254,6 +2259,10 @@ body {
     }
     .Fueling-Excellence-width{
         width: 1212px;
+     }
+     .Fueling-Excellence-img{
+        justify-content: end;
+        padding-right: 50px;
      }
 }
 
